syntax = "proto3";

import "base.proto";

service BuildersLabService {
    rpc ListenCreation (Empty) returns (stream BuildersLabState);
    rpc ListenState(ID) returns (stream BuildersLabState);

    rpc CancelOredr(CancelQueuedRequest) returns (Empty);

    rpc QueueAttackUpgrade(QueueAttackUpgradeRequest) returns (Empty);
    rpc QueueDefenceUpgrade(QueueDefenceUpgradeRequest) returns (Empty);
}

message QueueAttackUpgradeRequest {
    ID BuildingID = 1;
}

message QueueDefenceUpgradeRequest {
    ID BuildingID = 1;
}

message BuildersLabState {
    LaboratoryBuildingState Base = 1;
}