syntax = "proto3";

import "base.proto";

service RangedWarriorService {
    rpc ListenCreation (Empty) returns (stream RangedWarriorState);
    rpc ListenState(ID) returns (stream RangedWarriorState);

    rpc GoTo(GoToRequest) returns (Empty);

    rpc Attack(AttackRequest) returns (Empty);
}

message AttackRequest {
    ID TargetID = 1;
    ID WarriorID = 2;
}

message RangedWarriorState {
    UnitState Base = 1;
}